--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,5 @@
-<h1>StaticPages#index</h1>
+<h1>Bike Berlin</h1> <!--#StaticPages#index-->
 <p>Welcome! The date and time is <%= Time.now %></p>
-<% test_variable = 42 %>
-<%= test_variable %>
+<h1>Welcome to Bike Berlin </h1>
+<h2>Your source for used bikes in Berlin</h2>
+<%= image_tag("bike5.jpg",class:"img-responsive myImage",:align=>"middle") %>
