--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,46 @@
+nav{
+    background-color: yellow;
+    text-align:center;
+    height:50px;
+
+}
+
+li{
+    display: inline-block;
+    padding:10px;
+    font-size:20px;
+    font-weight:bold;
+
+}
+
+h1, h2, p{
+    font-family:Ariel;
+    color:blue;
+    text-align:center;
+}
+h2, p{
+    color: black;
+}
+
+footer{
+    background-color:yellow;
+    height:40px;
+    text-align:center;
+    position:fixed;
+    height:50px;
+    background-color:yellow;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    margin-bottom:0px;
+}
+
+
+
+.myImage{
+    text-align:center;
+}
+
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
