--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,3 @@
-<h1>StaticPages#contact</h1>
+<h1>Contact</h1><!--StaticPages#contact-->
 <p>Find me in app/views/static_pages/contact.html.erb. Contact Anjali Sharma at xxx-xxx-xxxx</p>
-<img src="Mountain">
-
+<%= image_tag("bike2.jpg",class:"img-responsive myImage",:align=>"middle") %>
