--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,8 +1,15 @@
+body{
+    background-color:grey;
+}
 nav{
     background-color: yellow;
     text-align:center;
     height:50px;
-
+    width:100%;
+    position:fixed;
+    top:0px;
+    left:0px;
+    right:0px;
 }
 
 li{
@@ -10,6 +17,7 @@ li{
     padding:10px;
     font-size:20px;
     font-weight:bold;
+    top:15px;
 
 }
 
@@ -37,9 +45,7 @@ footer{
 
 
 
-.myImage{
-    text-align:center;
-}
+
 
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
