--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Bike Berlin</h1> <!--#StaticPages#index-->
-<p>Welcome! The date and time is <%= Time.now %></p>
-<h1>Welcome to Bike Berlin </h1>
+<div class="Hello"><p id="stayleft">Welcome! The date and time is <%= Time.now %></p>
+</div><!--#StaticPages#index-->
+<h1>Welcome to Hello Bikes </h1>
 <h2>Your source for used bikes in Berlin</h2>
 <%= image_tag("kidsbike.jpg",class:"img-responsive myImage",:align=>"middle") %>
