--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,8 +1,8 @@
 body{
-    background-color:grey;
+    background-color:black;
 }
 nav{
-    background-color: yellow;
+    background-color: #ffcccc;
     text-align:center;
     height:50px;
     width:100%;
@@ -10,6 +10,8 @@ nav{
     top:0px;
     left:0px;
     right:0px;
+    color:brown black;
+    border:1px solid black;
 }
 
 li{
@@ -21,29 +23,54 @@ li{
 
 }
 
-h1, h2, p{
+h1{
     font-family:Ariel;
-    color:blue;
+    color:#b30000;
     text-align:center;
+    margin-top:50px;
+    width:100%;
+
+}
+.hello{
+    display:inline-block;
+}
+.welcome{
+    margin-top:15px;
+    text-align:center;
+    display:inline-block;
+    width:100%;
 }
 h2, p{
-    color: black;
+    color:white;
+    text-align:center;
+    margin-top:15px;
+}
+
+#stayleft{
+    float:left;
+    margin-top:0px;
+    display:inline-block;
 }
 
 footer{
-    background-color:yellow;
+    background-color:#ffcccc;
     height:40px;
     text-align:center;
     position:fixed;
     height:50px;
-    background-color:yellow;
     bottom:0px;
     left:0px;
     right:0px;
     margin-bottom:0px;
+    color:brown black;
+    border:1px solid black;
 }
 
-
+.img-responsive{
+    align:middle;
+    width:80%;
+    margin:auto;
+}
 
 
 
