--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nameofapp</title>
+    <title>Hello Bikes</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -14,43 +14,12 @@
 
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li><a href="/static_pages/index"><span class="glyphicon glyphicon-home"></span></a></li>
+        <li><a href="/static_pages/about">About</a></li>
+        <li><a href="/products/index">Products</a></li>
+        <li><a href="/static_pages/contact"><span class="glyphicon glyphicon-phone-alt"></span></a></li>
       </ul>
     </nav>
-
-    <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-       Indicators -->
-      <!--<ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-      wrapper for slides-->
-     <!-- <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="mountainBike.jpg" alt="We work smart">
-          <div class="carousel-caption">
-            <h3>We work smart</h3>
-              <p>because we believe in solutions</p>
-          </div>
-        </div>
-        <div class="item">
-          <img src="kidsBike.jpg" alt="We believe in solutions">
-          <div class="carousel-caption">
-            <h3>We work together</h3>
-              <p>This is an example description</p>
-          </div>
-        </div>
-        <div class="item">
-          <img src="TrekBikes.jpg" alt="We believe in solutions">
-          <div class="carousel-caption">
-            <h3>Because we believe in you</h3>
-              <p>This is an example description</p>
-          </div>
-        </div>
-      </div>end of div class carousal inner-->
 
 
     <%= yield %>
