--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,15 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
 
-<table>
-  <thead>
+<table border="1px" class="products">
+  <thead id="bikes">
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Imgage url</th>
+      <th class="Records">Name</th>
+      <th class="Records">Description</th>
+      <th class="Records">Image url</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,8 +31,3 @@
 <br>
 
 <%= link_to 'New Product', new_product_path %>
-<% paragraph_number = 1 %>
-<% 5.times do %>
-  <p>This is paragraph number <%= paragraph_number %></p>
-  <% paragraph_number = paragraph_number + 1 %>
-<% end %>
