--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,28 +3,22 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
-
-<table border="1px" class="products">
-  <thead id="bikes">
-    <tr>
-      <th class="Records">Name</th>
-      <th class="Records">Description</th>
-      <th class="Records">Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table>
   <tbody>
+   <div class="col-xs-6 col-md-3 thumb">
+
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.imgage_url %></td>
+        <td><%=link_to "images", product.description %></td>
+        <td><%= image_tag(product.imgage_url) %></td>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+        <td><%= link_to 'Edit', edit_product_path(product)%></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      </div>
     <% end %>
+   </div><!--end of col-xs-6-->
   </tbody>
 </table>
 
