--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,3 @@
 <h1>About</h1><!--StaticPages#about-->
-<p>Find me in app/views/static_pages/about.html.erb. Fun times with Hello Bikes!</p>
-<%= image_tag("bike7.jpg",class:"img-responsive myImage",:align=>"middle") %>
+<p>Hello Bikes was founded in 2017 by fun loving biking girls in New Jersey.<br> We promise you fun times with Hello Bikes!</p>
+<%= image_tag("",class:"img-responsive myImage",:align=>"middle") %>
