--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,47 @@
-<h1>Contact</h1><!--StaticPages#contact-->
-<p>Find me in app/views/static_pages/contact.html.erb. Contact Anjali Sharma at xxx-xxx-xxxx</p>
-<%= image_tag("TrekBikes.jpg",class:"img-responsive myImage",:align=>"middle") %>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<h1>Contact<h1>
+<!--StaticPages#contact-->
+
+<!--<%= image_tag("TrekBikes.jpg",class:"img-responsive myImage",:align=>"middle") %>-->
+
+    <!--important to talk about yourself-->
+      <div class="row" id="contact">
+       <div class ="col-lg-4 col-md-4">
+        <p class="email"><span class="glyphicon glyphicon-envelope"></span> Email <a href="giftrocket.com">anjalidsharma8@gmail.com</a> <br>  <span class="glyphicon glyphicon-earphone"></span> XXX-XXX-XXXX <br> Address: 444 Washington Blvd,<br> Jersey City,<br> NJ-07310</p>
+
+        <div id="map"></div>
+        <iframe class="google map" width="400" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=restaurants%20near%20444%20washington%20blvd%20jersey%20city&key=AIzaSyDWcluwqS23lxAzPuHt6khjjokA3qBSdJc" allowfullscreen></iframe>
+      </div>
+      <div class ="col-lg-8 col-md-8">
+        <form>
+          <h2 class="Hello"> Say Hello!</h2>
+            <div class="form-inline">
+              <div class="form-group">
+                <label class="col-lg-6" for="name">Name</label>
+                  <input class="form-control" type="text" minlength="10" id="name" placeholder="Your name" >
+              </div><!--end of form group-->
+
+              <div class="form-group">
+                <label class="col-lg-6" for="phone number">Phone</label>
+                  <input class="form-control" type="number" maxlength="10" id="phone_number" placeholder="Your Phone Nmber">
+              </div>
+
+            </div><!--end of form inline-->
+
+            <div class="form-group" id="Email">
+              <label for ="Email"> *Email</label>
+                <input class="form-control" type="email" required="required" placeholder="Your email"><p id="visible-email"></p>
+            </div>
+
+            <div class="form-group">
+              <label for ="message"> *Message</label>
+                <textarea  class="form-control" placeholder=" Your message here" id="message" style="resize:none" cols="40" rows="5" minlength=50 required="required"></textarea>
+                <p id="visible-comment"></p><p id="char-count"></p>
+                  <button type="submit" class="btn btn-default" id="submit">Submit</button>
+
+            </div>
+
+
+        </form>
+     </div><!--end of class col-lg-8-->
+    </div><!---end of row-->
