--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <p id="notice"><%= notice %></p>
 
 <div class="col-md-6 col-xs-12">
