--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--#StaticPages#index-->
 <%= image_tag("jamesthomas.jpg",class:"img-responsive myImage",:align=>"middle") %>
 
