--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--#StaticPages#index-->
-<%= image_tag("jamesthomas.jpg",class:"img-responsive myImage",:align=>"middle") %>
+<%= image_tag("racing-bicycle.png",class:"img-responsive myImage",:align=>"middle") %>
 
 
