--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,11 +6,17 @@ body{
 .field, actions{
     text-align:center;
 }
-
- .col-md-6{
+.crazy{
+    display:block;
+    width:50px;
+    margin:auto;
+    border-radius:5px;
+}
+ .col-xs-4{
     width:100%;
     height:40%;
     border-radius:10px;
+    margin-top:20px;
  }
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
