--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
   <tbody>
 
     <% @products.each do |product| %>
-      <tr>
+      <tr class="crazy">
         <td><%= product.name %></td>
         <td><%=link_to "images", product.description %></td>
         <td><%= image_tag(product.imgage_url) %></td>
