--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="col-md-6 col-xs-12">
+<div class="col-xs-4">
 <p>
   <strong>Name:</strong>
   <%= @product.name %>
