--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <h1>About</h1><!--StaticPages#about-->
 <p>Hello Bikes was founded in 2017 by fun loving biking girls in New Jersey.<br> We promise you fun times with Hello Bikes!</p>
-<%= image_tag("",class:"img-responsive myImage",:align=>"middle") %>
+<%= image_tag("andalotmore.jpeg",class:"img-responsive myImage",:align=>"middle") %>
