added color and price field to products

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -18,6 +18,21 @@ body{
     border-radius:10px;
     margin-top:20px;
  }
+
+.container{
+    width:100%;
+    padding:5px;
+    text-align:center;
+}
+
+
+.SED{
+    padding:2px;
+}
+#productName{
+    margin:auto;
+}
+
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
