--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,12 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--#StaticPages#index-->
-<%= image_tag("racing-bicycle.png",class:"img-responsive myImage",:align=>"middle") %>
 
+<!--#StaticPages#index-->
+<div class="Santa Cruz">
+  <div class="col-xs-2">
+    <h1>Ready to Roll</h1>
+    <p>Save 40% or more on select accessories</p>
+    <p><button type="button" class="btn btn-default" data-placement="Right" title="Tooltip on top">Shop Now</button></p>
+  </div><!--end of col-xs-2-->
+</div><!--end of santa cruz-->
+
+<%= image_tag("racing-bicycle.png",class:"img-responsive myImage") %>
 
