--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -87,7 +87,7 @@ h5 {
 }
 .img-responsive{
     align:middle;
-    width:80%;
+    width:100%;
     margin:auto;
 }
 
@@ -96,6 +96,10 @@ h5 {
     font-size:16px;
     float:left;
 
+}
+
+.myImage{
+    width:80%;
 }
 
 // Place all the styles related to the static_pages controller here.
