--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="col-xs-4">
+<div class="container image">
 <p>
   <strong>Name:</strong>
   <%= @product.name %>
@@ -16,6 +16,16 @@
 <p>
   <strong>image_url:</strong>
   <%=image_tag(@product.imgage_url) %>
+</p>
+
+<p>
+  <strong>Color:</strong>
+  <%= @product.color %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @product.price %>
 </p>
 </div><!--end of col-md-4-->
 <%= link_to 'Edit', edit_product_path(@product) %> |
