--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
       <div class="row">
         <% @products.each do|product|%>
           <div class="col-sm-2 col-md-4">
-            <%=image_tag(product.imgage_url, class:"img-responsive")unless product.imgage_url.blank? %>
+            <%=image_tag(product.imgage_url, class:"img-responsive") %>
           <h1 id="productName"><%=product.name %></h1>
             <p><%=product.description %></p>
             <p><%=product.color %></p>
