Fixed remaining spaces

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 <p id="notice"><%= notice %></p>
 
@@ -27,6 +27,6 @@
   <strong>Price:</strong>
   <%= @product.price %>
 </p>
-</div><!--end of col-md-4-->
+</div><!--end of container image-->
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
