--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,12 @@
-
 <!--#StaticPages#index-->
 <div class="Santa Cruz">
   <div class="col-xs-2">
     <h1>Ready to Roll</h1>
     <p>Save 40% or more on select accessories</p>
-    <p><button type="button" class="btn btn-default" data-placement="Right" title="Tooltip on top">Shop Now</button></p>
+    <button type="button" class="btn btn-default" data-placement="Right" title="Tooltip on top">
+      <%= link_to "Shop Now", products_path %>
+    </button>
   </div><!--end of col-xs-2-->
 </div><!--end of santa cruz-->
 
-<%= image_tag("racing-bicycle.png",class:"img-responsive myImage") %>
-
+<%= image_tag("racing-bicycle.png", class:"img-responsive myImage") %>
