--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,2 +1,5 @@
 <h2>Featured Product:</h2>
-<%=(@featured_product.name)unless featured_product.name blank? %>
+
+<% unless @featured_product.blank? %>
+  <%= @featured_product.name %>
+<% end %>
