--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :imgage_url %>
-    <%= f.text_field :imgage_url %>
+    <%= f.label :image_url %>
+    <%= f.text_field :image_url %>
   </div>
 
   <div class="field">
