--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
 
   <p>
     <strong>image_url:</strong>
-    <%=image_tag(@product.imgage_url) %>
+    <%=image_tag(@product.image_url) %>
   </p>
 
   <p>
