--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,5 @@
-<!--<h2>Featured Product:</h2>
+<h2>Featured Product:</h2>
 
 <% unless @featured_product.blank? %>
   <%= @featured_product.name %>
-<% end %>-->
+<% end %>
