--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,6 +1,12 @@
+* {
+  box-sizing:border-box;
+}
+
 body {
   margin: auto;
-  color: black;
+  color: white;
+  background-color:black;
+
 }
 
 .field,
@@ -8,24 +14,24 @@ body {
   text-align:center;
 }
 
-.crazy{
-  display: block;
-  width: 50px;
-  margin: auto;
-  border-radius: 5px;
-}
-
- .col-xs-4{
+ .row {
+   margin-top:0px;
    width: 100%;
    height: 40%;
-   border-radius: 10px;
-   margin-top: 20px;
+
  }
 
 .container{
+  margin-top:0px;
   width: 100%;
-  padding: 85px 0;
+  padding:15px;
   text-align: center;
+
+}
+
+.col-xs-6 {
+  margin:auto;
+  width:50%;
 }
 
 .SED { padding:2px; }
