--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
+<br>
+<%= link_to 'New Product', new_product_path %>
 
 <tbody>
   <div class="container">
     <div class="row">
      <% @products.each do|product|%>
-      <div class="col-sm-2 col-md-4">
+      <div class="col-xs-4 col-md-4 ">
 
-        <%= image_tag(product.image_url) %>
+       <img class="thumbnail img-responsive" <%= image_tag(product.image_url) unless product.image_url.blank? %> </img>
 
         <h1 id="productName"><%= product.name %></h1>
         <p><%= product.description %></p>
@@ -25,6 +27,3 @@
 </tbody>
 
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
