--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
      <% @products.each do |product|%>
       <div class="col-xs-4 col-md-4 ">
 
-           <%= image_tag(product.image_url) unless product.image_url.nil? %>
+           <%= image_tag(product.image_url, class:"img-responsive") unless product.image_url.nil? %>
 
         <h1 id="productName"><%= product.name %></h1>
         <p><%= product.description %></p>
