--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -4,16 +4,52 @@
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
+    <% @products.each do |product| %>
+
+    <li data-target="#carousel-example-generic" data-slide-to="<% @products.find_index %>" class="<%= "active" if product == @products.first %>"></li>
+    <% end %>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+        <% @products.each do |product| %>
+    <div class="item<%= " active" if product == @products.first %>">
+            <%= image_tag(product.image_url) %>
+      <div class="carousel-caption">
+        <h3><%= product.name %></h3>
+      </div>
+    </div>
+        <% end %>
+  </div>
+
+  <%= params[:example_key] %>
+
+    <!-- Controls -->
+ <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true" style="color:red;"></span>
+     <span class="sr-only">Previous</span>
+ </a>
+ <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true" style="color:red;"></span>
+     <span class="sr-only">Next</span>
+ </a>
+</div>
+
+
+
+<!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <!--<ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active dot" style=(color:red;)></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <!--<div class="carousel-inner" role="listbox">
     <% @products.each do |product| %>
     <div class="item <%= " active" if product == @products.first %>">
-      <p class="full image" style=(width:100%; height:100%;)><%= image_tag(product.image_url) %></p>
+      <p class="full image"><%= image_tag(product.image_url) %></p>
 
       <div class="carousel-caption">
        <p class="Bike name" style=(color:blue; font-size:18px;)><%= product.name %></p>
@@ -23,7 +59,7 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" >
+  <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" >
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true" style=(color:maroon;)></span>
     <span class="sr-only">Previous</span>
   </a>
