--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,8 +1,6 @@
 body {
-  background-color: #FFF;
-  margin: 15px;
+  background-color: gainsboro;
   color: #000;
-  background-color:gainsboro;
 }
 
 nav {
@@ -31,8 +29,12 @@ li {
 .email {
   text-align: left;
   font-size: 16px;
+  margin-left:15px;
 }
 
+.google map {
+  margin-left:15px;
+}
 h1 {
   font-family: "Ariel", sans-serif;
   color: #b30000;
@@ -96,6 +98,7 @@ h5 { text-align: center; }
   margin-bottom:15px;
 
  }
+
 .form-group {
   text-align: left;
   font-size: 16px;
@@ -104,7 +107,21 @@ h5 { text-align: center; }
 
 .myImage{ width: 80%; }
 
+.full image {
+  width:100%;
+  margin:-15px;
+  margin-top:40px;
+  height:80%;
+
+}
+
+.carousel-caption  {
+  bottom: 150px;
+  font-size: 2.5em;
+  }
+
 
 .dot {
   color:maroon;
 }
+
