changed application.js and show.html

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
 
   <p>
     <strong>image_url:</strong>
-    <%= image_tag @product.image_url unless @product.image_url.blank? %>
+    <%= image_tag @product.image_url unless @product.image_url.nil? %>
   </p>
 
   <p>
