--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,13 +1,14 @@
-<div class="col-xs-4 col-md-4 ">
-
+<% @products.each do |product|%>
+  <div class="col-xs-4 col-md-4 ">
     <%= image_tag(product.image_url, class:"img-responsive") unless product.image_url.nil? %>
 
-        <h1 id="productName"><%= product.name %></h1>
-        <p><%= product.description %></p>
-        <p><%= product.color %></p>
-        <strong> $ <%= product.price %></strong>
-        <p class="SED"><%= link_to 'Show', product %>
+    <h1 id="productName"><%= product.name %></h1>
+    <p><%= product.description %></p>
+    <p><%= product.color %></p>
+    <strong> $ <%= product.price %></strong>
+    <p class="SED"><%= link_to 'Show', product %>
 
-        <%= link_to 'Edit',edit_product_path(product)%>
-        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-</div><!-- /col -->
+      <%= link_to 'Edit',edit_product_path(product)%>
+      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+  </div><!-- /col -->
+<% end %>
