--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,11 +7,29 @@
 <tbody>
   <div class="container">
     <div class="row">
-     <% @products.each do |product|%>
-      <%= render @products %>
-     <%end%>
+      <%= render "product" %>
     </div><!--end of row-->
   </div><!--end of container-->
 </tbody>
+
+
+
+
+
+<!--<p id="notice"><%= notice %></p>
+
+<h1>Products</h1>
+<br>
+  <%= link_to 'New Product', new_product_path %>
+
+<tbody>
+  <div class="container">
+    <div class="row">
+     <% @products.each do |product|%>
+      <%= render products %>
+     <%end%>
+    </div><!--end of row
+  </div><!--end of container-->
+<!--</tbody>-->
 
 
