--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,10 @@
 <tbody>
   <div class="container">
     <div class="row">
-      <%= render "product" %>
+    <% @products.each do |product|%>
+      <%= render partial: "product", locals: {product: product} %>
     </div><!--end of row-->
+    <% end %>
   </div><!--end of container-->
 </tbody>
 
