--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,9 +8,9 @@
   <div class="container">
     <div class="row">
     <% @products.each do |product|%>
-      <%= render partial: "product", locals: {product: product} %>
+      <%= render @products %>
     </div><!--end of row-->
-    <% end %>
+  <% end %>
   </div><!--end of container-->
 </tbody>
 
