created a shared folder for partial

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -74,11 +74,11 @@ h2, p {
   float:center;
 }
 footer {
-    background-color: #000;
+    background-color: gainsboro;
     text-align: center;
     height: 30px;
     color: #FFF;
-    border: 1px solid #000;
+
     position: fixed;
     left: 0;
     right:0;
