--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -4,8 +4,8 @@
     <h1 id="productName"><%= product.name %></h1>
     <p><%= product.description %></p>
     <p><%= product.color %></p>
-    <strong> $ <%= product.price %></strong>
-    <p class="SED"><%= link_to 'Show', product %>
+    <strong><p>$<%= product.price %></p></strong>
+    <p><%= link_to 'Show', product %>
 
       <%= link_to 'Edit',edit_product_path(product)%>
       <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
