Till successfully deployed to heroku

--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,5 +1,5 @@
   <div class="col-xs-4 col-md-4 ">
-    <%= image_tag(product.image_url, class:"img-responsive") unless product.image_url.nil? %>
+    <%= image_tag(product.image_url, class:"img-responsive") %>
 
     <h1 id="productName"><%= product.name %></h1>
     <p><%= product.description %></p>
