--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,4 +1,5 @@
-  <div class="col-xs-4 col-md-4 ">
+<div class="col-xs-4 col-md-4 ">
+
     <%= image_tag(product.image_url, class:"img-responsive") %>
 
     <h1 id="productName"><%= product.name %></h1>
@@ -8,7 +9,7 @@
     <p><%= link_to 'Show', product %>
 
       <%= link_to 'Edit',edit_product_path(product)%>
-      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <%= link_to 'Destroy', product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+</div><!--end of col-->
 
-  </div><!-- /col -->
 
