--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,41 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
-      <nav>
-        <ul>
-           <li><%=link_to "Home",static_pages_index_path %></li>
-           <li><%=link_to "About",static_pages_about_path %></li>
-           <li><%=link_to "Products",products_path %></li>
-           <li><%=link_to "Contact",static_pages_contact_path %></li>
-           <li><%=link_to "Login",static_pages_login_path %></li>
-        </ul>
-      </nav>
+<body data-spy="scroll" data-target=".navbar">
+    <div id="fb-root"></div>
+    <!-- Fixed navbar -->
 
-    <%= yield %>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header text-center">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!--<a class="navbar-brand" href="#">Project name</a>-->
+        </div><!--navbar-header-->
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><%=link_to "Home",static_pages_index_path %></li>
+            <li><%=link_to "About",static_pages_about_path %></li>
+            <li><%=link_to "Products",products_path %></li>
+            <li><%=link_to "Contact",static_pages_contact_path %></li>
+            <li><%=link_to "Login",static_pages_login_path %></li>
+          </ul>
+          <%= form_tag("/products", method: "get") do %>
+        <%= label_tag(:q, "Search for:") %>
+        <%= text_field_tag(:q) %>
+        <%= submit_tag("Search") %>
+        <% end %>
+        </div><!--/.nav-collapse -->
+      </div><!--container-->
+    </nav>
+
+<%= yield %>
+
 
     <footer class="site-footer">
       &copy; 2015 Bike Berlin
