--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,4 +1,4 @@
-<h2>Featured Product:</h2>
+
 <!--<%= @featured_product.name unless @featured_product.nil? %>-->
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -22,7 +22,7 @@
         <% end %>
   </div>
 
-  <%= params[:example_key] %>
+  <!--<%= params[:example_key] %>-->
 
     <!-- Controls -->
  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -34,6 +34,8 @@
      <span class="sr-only">Next</span>
  </a>
 </div>
+
+
 
 
 
