--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,39 +1,42 @@
-* {
+@media (min-width: 768px) {
+  * {
   box-sizing:border-box;
-}
+  }
 
-body {
+  body {
   margin: auto;
   color: white;
   background-color:black;
 
+  }
+
+  .field,
+  .actions {
+    text-align:center;
+  }
+
+   .row {
+     margin-top:0px;
+     width: 100%;
+     height: 40%;
+
+   }
+
+  .container{
+    margin-top:0px;
+    width: 100%;
+    padding:15px;
+    text-align: center;
+
+  }
+
+
+
+  .SED { padding:2px; }
+
+  #productName { 
+    margin: auto; 
+   font-size: 16px;
+   padding-top:5px;
+    }
 }
-
-.field,
-.actions {
-  text-align:center;
-}
-
- .row {
-   margin-top:0px;
-   width: 100%;
-   height: 40%;
-
- }
-
-.container{
-  margin-top:0px;
-  width: 100%;
-  padding:15px;
-  text-align: center;
-
-}
-
-.col-xs-4 {
-
-
-}
-
-.SED { padding:2px; }
-
-#productName { margin: auto; }
