--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,10 +1,10 @@
- @media (min-width: 320px) {
+ 
     body {
-    background-color: #113359;
+    background-color: #12223d;
     color: #e1dce2;
     padding-top:50px;
   }
-}
+
 
   .search {
     background-color:orange;
@@ -29,11 +29,12 @@
     display: inline-block;
     float: none;
     vertical-align: top;
+
     }
 
     .navbar .navbar-collapse {
     text-align: center;
-    line-height: 0px;
+    
     }
 }
 
