--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,32 +11,38 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4 ">
+          <div class="form-group">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
+          <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
-  </div>
+          <div class="form-group">
+            <%= f.label :image_url %>
+            <%= f.text_field :image_url, class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :color %>
-    <%= f.text_field :color %>
-  </div>
+          <div class="form-group">
+            <%= f.label :color %>
+            <%= f.text_field :color, class: "form-control"%>
+          </div>
 
-  <div class="field">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-  </div>
+          <div class="form-group">
+            <%= f.label :price %>
+            <%= f.text_field :price, class: "form-control" %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+          <div class="actions">
+            <%= f.submit class: "btn btn-default btn-small"%>
+          </div>
+      <% end %>
+      </div>
+      </div>
+      </div>
