For 5.2 search box

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,8 @@
             <li><%=link_to "Contact",static_pages_contact_path %></li>
             <li><%=link_to "Login",static_pages_login_path %></li>
             <li><%= form_tag("/products", method: "get", class: "navbar-form") do %>
-              <%= label_tag(:q ) %>
-              <%= text_field_tag(:q, "", class:"form-control") %>
+              <%= label_tag(:q, "") %>
+              <%= text_field_tag(:q, "", class: "form-control") %>
               <%= submit_tag("Search", class: "btn btn-default btn-primary btn-sm") %>
             <% end %>
               
