Created new branch Authentication and added User scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
     <div id="fb-root"></div>
     <!-- Fixed navbar -->
 
-
+    <p class="notice"><%= notice %></p>
+       
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid" id ="nav_center">
         <div class="navbar-header text-center">
