--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,7 +1,7 @@
  
     body {
-    background-color: #12223d;
-    color: #e1dce2;
+    background-color: #0a4682;
+    color: black;
     padding-top:50px;
   }
 
@@ -91,7 +91,7 @@
     margin-top: 15px;
   }
 
-  #login { width: 400px; }
+  
 
   #stayleft {
     float: left;
