--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
             <li><%=link_to "About",static_pages_about_path %></li>
             <li><%=link_to "Products",products_path %></li>
             <li><%=link_to "Contact",static_pages_contact_path %></li>
+            <li><%=link_to "Users",users_path %></li>
             <li>
               <% if user_signed_in? %>
                <%= link_to("Logout", destroy_user_session_path, :method => :delete) %>
