--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,19 @@
 <p id="notice" class="alert alert-info"><%= notice %></p>
 
 <div class="container image">
+  <div class="row">
+    <div class="col-lg-8 center">
   <p>
     <strong>Name:</strong>
     <%= @product.name %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
+  
+    <br><strong> Description:</strong>
     <%=@product.description %>
   </p>
+  <p><strong>Image_url:</strong></p>
 
-  <p>
-    <strong>image_url:</strong>
+  <p class="thumbnail">
+    
     <%= image_tag @product.image_url unless @product.image_url.nil? %>
   </p>
 
@@ -25,7 +26,11 @@
     <strong>Price:</strong>
     <%= @product.price %>
   </p>
+    </div><!--end of col-->
+  </div><!--end of row-->
 </div><!--end of container image-->
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+<%= @product.comments.rating_desc.first %>
+<%= @product.comments.rating_asc.first %>
