--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container image">
   <div class="row">
-    <div class="col-lg-8 center">
+    <div class="col-lg-6  center">
   <p>
     <strong>Name:</strong>
     <%= @product.name %>
@@ -29,6 +29,34 @@
     </div><!--end of col-->
   </div><!--end of row-->
 </div><!--end of container image-->
+<% if signed_in? %>
+  <h4>Add a review:</h4>
+  <%= form_for([@product, @product.comments.build]) do |f| %>
+    <p>
+      <%= f.label :body, "Comments" %><br>
+      <%= f.text_area :body %>
+    </p>
+    <p>
+      <%= f.label :rating %><br>
+      <%= f.text_field :rating, class: "rating" %>
+    </p>  
+    <p>
+      <%= f.submit "Submit" %>
+    </p>
+  <% end %>
+<% end %>
+
+<div class="product-reviews">
+    <% @comments.each do |comment| %>
+        <div class="row">
+            <hr>
+            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+            <p><%= "Rating: #{comment.rating}/5" %></p>
+            <p><%= comment.body %></p>
+        </div>
+    <% end %>
+</div>
+
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
