--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,3 +1,5 @@
+<div class="rated" data-score="<%= comment.rating %>"></div>
+
 <div class="product-reviews">
     <% @comments.each do |comment| %>
         <div class="row">
