--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
   <div class="col-xs-2">
     <h1>Ready to Roll</h1>
     <p>Save 40% or more on select accessories</p>
-    <button type="button" class="btn btn-default" data-placement="Right" title="Tooltip on top">
+    <button type="button" class="btn btn-default" data-placement="Center" title="Tooltip on top">
       <%= link_to "Shop Now", products_path %>
     </button>
   </div><!--end of col-xs-2-->
