--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,6 +1,6 @@
  
     body {
-    background-color: #0a4682;
+    background-color: white;
     color: black;
     padding-top:50px;
   }
@@ -104,7 +104,7 @@
     float:none;
   }
   footer {
-      background-color: gainsboro;
+      background-color: purple;
       text-align: center;
       height: 30px;
       color: #FFF;
@@ -154,6 +154,6 @@
     font-size: 2.5em;
     }
 
-
+ 
 
 
