--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -6,14 +6,14 @@
 
 <%= form_tag("/static_pages/thank_you") do %>
 
-
-<div class="row" id="contact">
+<div class="container">
+  <div class="row" id="contact">
        <div class ="col-lg-4 col-md-4">
           <p class="email"><span class="glyphicon glyphicon-envelope"></span> Email <a href="giftrocket.com">anjalidsharma8@gmail.com</a> <br>  <span class="glyphicon glyphicon-earphone"></span> XXX-XXX-XXXX <br> Address: 444 Washington Blvd,<br> Jersey City,<br> NJ-07310</p>
 
-        <div id="map"></div>
+        
           <iframe class="google map" width="280" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=restaurants%20near%20444%20washington%20blvd%20jersey%20city&key=AIzaSyDWcluwqS23lxAzPuHt6khjjokA3qBSdJc" allowfullscreen></iframe>
-      </div><!--end of col-->
+       </div><!--end of col-->
       <div class ="col-lg-8 col-md-8">
          <div class="col-md-4">
             <div class="form-group center">
@@ -33,8 +33,8 @@
         <% end %> 
         
         </div><!--end of col-lg 8-->
-        
-        </div><!--end of row-->
+  </div><!--end of row-->
+</div><!--end of container-->
         
 
     
